--- a/refactoring/10/简化条件逻辑.md
+++ b/refactoring/10/简化条件逻辑.md
@@ -377,9 +377,717 @@ function adjustedCapital(anInstrument){
 }
 ```
 
+## 10.4 以多态取代条件表达式（Replace Conditional with Polymorphism）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+switch (bird.type){
+    case 'EuropeanSwallow':
+        return "average";
+    case 'AfricanSwallow':
+        return (bird.numberOfCoconuts > 2) ? "tired" : "average";
+    case 'NorwegianBlueParrot':
+        return (bird.voltage > 100) ? "scorched" : "beautiful";
+    default:
+        return "unknown";
+}
+```
+
+重构为：
+
+```javascript
+class EuropeanSwallow {
+    get plumage(){
+        return "average";
+    }
+}
+class AfricanSwallow {
+    get plumage() {
+    	return (this.numberOfCoconuts > 2) ? "tired" : "average";
+    }
+}
+class NorwegianBlueParrot {
+    get plumage(){
+        return (bird.voltage > 100) ? "scorched" : "beautiful";
+    }
+}
+```
+
+3. 动机
+
+4. 做法
+
+- 如果现有的类尚不具备多态行为，就用工厂函数创建之，令工厂函数返回恰当的对象实例
+- 在调用方代码中使用工厂函数获得的对象实例
+- 将带有条件逻辑的函数移动到超类中
+- 任选一个子类，在其中建立一个函数，使之覆写超类中容纳条件表达式的那个函数。将与该子类相关的条件表达式分支复制到新函数中，并对它进行适当调整
+- 重复上述过程，处理其他条件分支
+- 在超类函数中保留默认情况的逻辑。或者，如果超类应该时抽象的，就把该函数声明为abstract，或在其中直接抛出异常，表明责任都在子类中
+
+5. 范例
+
+- 范例一：
+
+```javascript
+function plumages(birds){
+    return new Map(brids,map(b => [b.name, plumage(b)]));
+}
+function speeds(birds){
+    return new Map(birds.map(b = > [b.name, airSpeedVelocity(b)]));
+}
+function plumage(bird){
+    switch (bird.type){
+    case 'EuropeanSwallow':
+        return "average";
+    case 'AfricanSwallow':
+        return (bird.numberOfCoconuts > 2) ? "tired" : "average";
+    case 'NorwegianBlueParrot':
+        return (bird.voltage > 100) ? "scorched" : "beautiful";
+    default:
+        return "unknown";
+	}
+}
+function airSpeedVelocity(bird){
+    switch (bird.type){
+    case 'EuropeanSwallow':
+        return 35;
+    case 'AfricanSwallow':
+        return 40 - 2 * bird.numberOfCoconuts;
+    case 'NorwegianBlueParrot':
+        return (bird.isNailed) ? 0 : 10 + bird.voltage / 10;
+    default:
+        return null;
+	}
+}
+```
+
+两种操作都和鸟的类型相关，因此可以创建对应的类
+
+```javascript
+function plumage(bird){
+    return new Bird(bird).plumage;
+}
+function airSpeedVelocity(bird){
+    return new Bird(bird).airSpeedVelocity;
+}
+class Bird {
+    constructor(birdObject){
+        Object.assign(this, birdObject);
+    }
+    get plumage(){
+       switch (bird.type){
+    		case 'EuropeanSwallow':
+        		return "average";
+    		case 'AfricanSwallow':
+        		return (bird.numberOfCoconuts > 2) ? "tired" : "average";
+    		case 'NorwegianBlueParrot':
+        		return (bird.voltage > 100) ? "scorched" : "beautiful";
+    		default:
+        		return "unknown";
+		} 
+    }
+    get airSpeedVelocity(){
+		switch (bird.type){
+    		case 'EuropeanSwallow':
+        		return 35;
+    		case 'AfricanSwallow':
+        		return 40 - 2 * bird.numberOfCoconuts;
+    		case 'NorwegianBlueParrot':
+        		return (bird.isNailed) ? 0 : 10 + bird.voltage / 10;
+    		default:
+        		return null;
+		}
+    }
+}
+```
+
+然后针对每种鸟创建一个子类，用一个工厂函数来实例化合适的子类对象
+
+```javascript
+function plumage(bird){
+    return createBird(bird).plumage;
+}
+function airSpeedVelocity(bird){
+    return createBird(bird).airSpeedVelocity;
+}
+function createBird(bird){
+    switch (bird.type){
+    	case 'EuropeanSwallow':
+        	return new EuropeanSwallow(bird);
+    	case 'AfricanSwallow':
+        	return new AfricanSwallow(bird);
+    	case 'NorwegianBlueParrot':
+        	return new NorwegianBlueParrot(bird);
+    	default:
+        	return new Bird(bird);
+	} 
+}
+class EuropeanSwallow extends Bird{}
+class AfricanSwallow extends Bird{}
+class NorwegianBlueParrot extends Bird{}
+class Bird {
+    constructor(birdObject){
+        Object.assign(this, birdObject);
+    }
+    get plumage(){
+       switch (bird.type){
+    		case 'EuropeanSwallow':
+        		return "average";
+    		case 'AfricanSwallow':
+        		return (bird.numberOfCoconuts > 2) ? "tired" : "average";
+    		case 'NorwegianBlueParrot':
+        		return (bird.voltage > 100) ? "scorched" : "beautiful";
+    		default:
+        		return "unknown";
+		} 
+    }
+    get airSpeedVelocity(){
+		switch (bird.type){
+    		case 'EuropeanSwallow':
+        		return 35;
+    		case 'AfricanSwallow':
+        		return 40 - 2 * bird.numberOfCoconuts;
+    		case 'NorwegianBlueParrot':
+        		return (bird.isNailed) ? 0 : 10 + bird.voltage / 10;
+    		default:
+        		return null;
+		}
+    }
+}
+```
+
+从switch的分支中覆写子类，先些plumage
+
+```javascript
+function plumage(bird){
+    return createBird(bird).plumage;
+}
+function airSpeedVelocity(bird){
+    return createBird(bird).airSpeedVelocity;
+}
+function createBird(bird){
+    switch (bird.type){
+    	case 'EuropeanSwallow':
+        	return new EuropeanSwallow(bird);
+    	case 'AfricanSwallow':
+        	return new AfricanSwallow(bird);
+    	case 'NorwegianBlueParrot':
+        	return new NorwegianBlueParrot(bird);
+    	default:
+        	return new Bird(bird);
+	} 
+}
+class EuropeanSwallow extends Bird{
+    get plumage(){
+        return "average";
+    }
+}
+class AfricanSwallow extends Bird{
+    get plumage(){
+        return (this.numberOfCoconuts > 2) ? "tired" : "average";
+    }
+}
+class NorwegianBlueParrot extends Bird{
+    get plumage(){
+        return (this.voltage > 100) ? "scorched" : "beautiful";
+    }
+}
+class Bird {
+    constructor(birdObject){
+        Object.assign(this, birdObject);
+    }
+    get plumage(){
+    	return "unknown";
+    }
+    get airSpeedVelocity(){
+		switch (bird.type){
+    		case 'EuropeanSwallow':
+        		return 35;
+    		case 'AfricanSwallow':
+        		return 40 - 2 * bird.numberOfCoconuts;
+    		case 'NorwegianBlueParrot':
+        		return (bird.isNailed) ? 0 : 10 + bird.voltage / 10;
+    		default:
+        		return null;
+		}
+    }
+}
+```
+
+覆写airSpeedVelocity
+
+```javascript
+function plumage(bird){
+    return createBird(bird).plumage;
+}
+function airSpeedVelocity(bird){
+    return createBird(bird).airSpeedVelocity;
+}
+function createBird(bird){
+    switch (bird.type){
+    	case 'EuropeanSwallow':
+        	return new EuropeanSwallow(bird);
+    	case 'AfricanSwallow':
+        	return new AfricanSwallow(bird);
+    	case 'NorwegianBlueParrot':
+        	return new NorwegianBlueParrot(bird);
+    	default:
+        	return new Bird(bird);
+	} 
+}
+class EuropeanSwallow extends Bird{
+    get plumage(){
+        return "average";
+    }
+    get airSpeedVelocity(){
+        return 35;
+    }
+}
+class AfricanSwallow extends Bird{
+    get plumage(){
+        return (this.numberOfCoconuts > 2) ? "tired" : "average";
+    }
+    get airSpeedVelocity(){
+        return 40 - 2 * this.numberOfCoconuts;
+    }
+}
+class NorwegianBlueParrot extends Bird{
+    get plumage(){
+        return (this.voltage > 100) ? "scorched" : "beautiful";
+    }
+    get airSpeedVelocity(){
+        return (this.isNailed) ? 0 : 10 + this.voltage / 10;
+    }
+}
+class Bird {
+    constructor(birdObject){
+        Object.assign(this, birdObject);
+    }
+    get plumage(){
+    	return "unknown";
+    }
+    get airSpeedVelocity(){
+    	return null;
+    }
+}
+```
+
+最后整理
+
+```javascript
+function plumages(birds){
+    return new Map(birds
+                   .map(b => createBird(b))
+                   .map(bird => [bird.name, bird.plumage]));
+}
+function speeds(birds){
+    return new Map(birds
+                  .map(b => createBied(b))
+                  .map(bird => [bird.name, bird.airSpeedVelocity]));
+}
+function createBird(bird){
+    switch (bird.type){
+    	case 'EuropeanSwallow':
+        	return new EuropeanSwallow(bird);
+    	case 'AfricanSwallow':
+        	return new AfricanSwallow(bird);
+    	case 'NorwegianBlueParrot':
+        	return new NorwegianBlueParrot(bird);
+    	default:
+        	return new Bird(bird);
+	} 
+}
+class EuropeanSwallow extends Bird{
+    get plumage(){
+        return "average";
+    }
+    get airSpeedVelocity(){
+        return 35;
+    }
+}
+class AfricanSwallow extends Bird{
+    get plumage(){
+        return (this.numberOfCoconuts > 2) ? "tired" : "average";
+    }
+    get airSpeedVelocity(){
+        return 40 - 2 * this.numberOfCoconuts;
+    }
+}
+class NorwegianBlueParrot extends Bird{
+    get plumage(){
+        return (this.voltage > 100) ? "scorched" : "beautiful";
+    }
+    get airSpeedVelocity(){
+        return (this.isNailed) ? 0 : 10 + this.voltage / 10;
+    }
+}
+class Bird {
+    constructor(birdObject){
+        Object.assign(this, birdObject);
+    }
+    get plumage(){
+    	return "unknown";
+    }
+    get airSpeedVelocity(){
+    	return null;
+    }
+}
+```
+
+- 范例二：用多态处理变体逻辑
+
+```javascript
+function rating(voyage, history){
+    const vpf = voyageProfitFactor(voyage, history);
+    const vr = voyageRisk(voyage);
+    const chr = captainHistoryRisk(voyage, history);
+    if (vpf *3 > (vr + chr * 2)) return "A";
+    else retuen "B"
+}
+function voyageRisk(voyage){
+    let result = 1;
+    if (voyage.length > 4) result += 2;
+    if (voyage.length > 8) result += voyage.length - 8;
+    if (["china", "east-indies"].includes(voyage.zone)) result +=4;
+    return Math.max(result, 0);
+}
+function captainHistoryRisk(voyage, history){
+    let result = 1;
+    if (history.length < 5) result += 4;
+    result += history.filter(v => v.profit < 0).length;
+    if (voyage.zone === "china" && hasChina(history)) result -= 2;
+    return Math.max(result, 0);
+}
+function hasChina(history){
+    return history,some(v => "china" === v.zone);
+}
+finction voyageProfitFactor(voyage, history){
+    let result = 2;
+    if (voyage,zone === "china") result += 1;
+    if (voyage.zone === "east.indies") result += 1;
+    if (voyage.zone === "china" && hasChian(history)){
+        result += 3;
+        if (history.length > 10) result += 1;
+        if (voyage,length > 12) result += 1;
+        if (voyage.length > 18) result -= 1;
+    }
+    else{
+        if (history.length > 8) result += 1;
+        if (voyage.length > 14) result -= 1;
+    }
+    return result; 
+}
+```
+
+首先使用函数组合成类
+
+```javascript
+function rating(voyage, history){
+    return new Rating(voyage, history).value;
+}
+class Rating{
+    constructor(voyage, history){
+        this.vvoyage = voyage;
+        this.history = history;
+    }
+    get value(){
+        const vpf = voyageProfitFactor(voyage, history);
+    	const vr = voyageRisk(voyage);
+    	const chr = captainHistoryRisk(voyage, history);
+    	if (vpf *3 > (vr + chr * 2)) return "A";
+    	else retuen "B"
+    }
+    get voyageRisk(){
+        let result = 1;
+    	if (this.voyage.length > 4) result += 2;
+    	if (this.voyage.length > 8) result += this.voyage.length - 8;
+    	if (["china", "east-indies"].includes(this.voyage.zone)) result +=4;
+    	return Math.max(result, 0);
+    }
+    get captainHistoryRisk(){
+        let result = 1;
+    	if (this.history.length < 5) result += 4;
+    	result += this.history.filter(v => v.profit < 0).length;
+    	if (this.voyage.zone === "china" && this.hasChinaHistory) result -= 2;
+    	return Math.max(result, 0);
+    }
+    get voyageProfitFactor(){
+        let result = 2;
+    	if (this.voyage,zone === "china") result += 1;
+    	if (this.voyage.zone === "east.indies") result += 1;
+    	if (this.voyage.zone === "china" && this.hasChianHistory){
+        	result += 3;
+        	if (this.history.length > 10) result += 1;
+        	if (this.voyage,length > 12) result += 1;
+        	if (this.voyage.length > 18) result -= 1;
+    	}
+    	else{
+        	if (this.history.length > 8) result += 1;
+        	if (this.voyage.length > 14) result -= 1;
+    	}
+        return result;
+    }
+    get hasChianHistory(){
+        return this.history,some(v => "china" === v.zone);
+    }
+}
+```
+
+创建一个空的子类，用来安放与超类不同的行为
+
+```javascript
+class ExperienceChianRating extends Rating {}
+```
+
+然后建立一个工厂函数，用于在需要时返回变体类
+
+```javascript
+function createRating(voyage, history){
+    if (voyage,zone === "chian" && history.some(v => "china" === v.zone))
+        return new ExperienceChianRating(voyage, history);
+    else retuen new Rating(voyage, history);
+}
+```
+
+先处理captainHistoryRisk中的逻辑
+
+```javascript
+class Rating {
+	get captainHistoryRisk(){
+        let result = 1;
+    	if (this.history.length < 5) result += 4;
+    	result += this.history.filter(v => v.profit < 0).length;
+    	return Math.max(result, 0);
+    }
+}
+class ExperienceChianRating extends Rating {
+	get captainHistoryRisk(){
+        const result = super.captainHistoryRisk - 2;
+        return Math.max(result, 0);
+    }
+}
+```
+
+然后处理voyageProfitFactor函数，先提炼函数
+
+```javascript
+class Rating {
+    get voyageProfitFactor(){
+        let result = 2;
+    	if (this.voyage,zone === "china") result += 1;
+    	if (this.voyage.zone === "east.indies") result += 1;
+    	result += this.voyageAndHistoryLengthProfitFactor;
+        return result;
+    }
+    get voyageAndHistoryLengthProfitFactor(){
+        let result = 0;
+        if (this.voyage.zone === "china" && this.hasChianHistory){
+        	result += 3;
+        	if (this.history.length > 10) result += 1;
+        	if (this.voyage,length > 12) result += 1;
+        	if (this.voyage.length > 18) result -= 1;
+    	}
+    	else{
+        	if (this.history.length > 8) result += 1;
+        	if (this.voyage.length > 14) result -= 1;
+    	}
+        retuen result;
+    }
+}
+```
+
+子类覆写
+
+```javascript
+class Rating {
+    get voyageProfitFactor(){
+        let result = 0;
+    	if (this.voyage,zone === "china") result += 1;
+    	if (this.voyage.zone === "east.indies") result += 1;
+    	result += this.voyageAndHistoryLengthProfitFactor;
+        return result;
+    }
+    get voyageAndHistoryLengthProfitFactor(){
+        let result = 0;
+        if (this.history.length > 8) result += 1;
+        if (this.voyage.length > 14) result -= 1;
+        retuen result;
+    }
+}
+class ExperienceChianRating extends Rating {
+    get voyageAndHistoryLengthProfitFactor(){
+        let result = 0;
+        result += 3;
+        if (this.history.length > 10) result += 1;
+        if (this.voyage,length > 12) result += 1;
+        if (this.voyage.length > 18) result -= 1;
+        return result;
+    }
+}
+```
+
+将And函数分开
+
+```javascript
+class Rating {
+    get voyageAndHistoryLengthProfitFactor(){
+        let result = 0;
+        result += this.historyLengthFactor;
+        if (this.voyage.length > 14) result -= 1;
+        retuen result;
+    }
+    get historyLengthFactor(){
+        return (this.history.length> 8) ? 1 : 0;
+    }
+}
+class ExperienceChianRating extends Rating {
+    get voyageAndHistoryLengthProfitFactor(){
+        let result = 0;
+        result += 3;
+        result += this.historyLengthFactor;
+        if (this.voyage,length > 12) result += 1;
+        if (this.voyage.length > 18) result -= 1;
+        return result;
+    }
+     get historyLengthFactor(){
+         return (this.history.length> 10) ? 1 : 0;
+     }
+}
+```
+
+然后将语句搬移到调用者
+
+```javascript
+class Rating {
+    get voyageProfitFactor(){
+        let result = 0;
+    	if (this.voyage,zone === "china") result += 1;
+    	if (this.voyage.zone === "east.indies") result += 1;
+        result += this.historyLengthFactor;
+    	result += this.voyageAndHistoryLengthProfitFactor;
+        return result;
+    }
+    get voyageAndHistoryLengthProfitFactor(){
+        let result = 0;
+        if (this.voyage.length > 14) result -= 1;
+        retuen result;
+    }
+    get historyLengthFactor(){
+        return (this.history.length> 8) ? 1 : 0;
+    }
+}
+class ExperienceChianRating extends Rating {
+    get voyageAndHistoryLengthProfitFactor(){
+        let result = 0;
+        result += 3;
+        if (this.voyage,length > 12) result += 1;
+        if (this.voyage.length > 18) result -= 1;
+        return result;
+    }
+     get historyLengthFactor(){
+         return (this.history.length> 10) ? 1 : 0;
+     }
+}
+```
+
+函数改名
+
+```javascript
+class Rating {
+    get voyageProfitFactor(){
+        let result = 0;
+    	if (this.voyage,zone === "china") result += 1;
+    	if (this.voyage.zone === "east.indies") result += 1;
+        result += this.historyLengthFactor;
+    	result += this.voyageLengthtFactor;
+        return result;
+    }
+    get voyageLengthtFactor(){
+        return (this.voyage.length > 14) > -1: 0;
+    }
+    get historyLengthFactor(){
+        return (this.history.length> 8) ? 1 : 0;
+    }
+}
+class ExperienceChianRating extends Rating {
+    get voyageLengthFactor(){
+        let result = 0;
+        result += 3;
+        if (this.voyage,length > 12) result += 1;
+        if (this.voyage.length > 18) result -= 1;
+        return result;
+    }
+     get historyLengthFactor(){
+         return (this.history.length> 10) ? 1 : 0;
+     }
+}
+```
+
+最终代码如下：
+
+```javascript
+class Rating {
+    constructor(voyage, history){
+        this.vvoyage = voyage;
+        this.history = history;
+    }
+    get value(){
+        const vpf = this.voyageProfitFactor;
+    	const vr = this.voyageRisk;
+    	const chr = this.captainHistoryRisk;
+    	if (vpf *3 > (vr + chr * 2)) return "A";
+    	else retuen "B"
+    }
+    get voyageRisk(){
+        let result = 1;
+    	if (this.voyage.length > 4) result += 2;
+    	if (this.voyage.length > 8) result += this.voyage.length - 8;
+    	if (["china", "east-indies"].includes(this.voyage.zone)) result +=4;
+    	return Math.max(result, 0);
+    }
+    get captainHistoryRisk(){
+        let result = 1;
+    	if (this.history.length < 5) result += 4;
+    	result += this.history.filter(v => v.profit < 0).length;
+    	return Math.max(result, 0);
+    }
+    get voyageProfitFactor(){
+        let result = 2;
+    	if (this.voyage,zone === "china") result += 1;
+    	if (this.voyage.zone === "east.indies") result += 1;
+        result += this.historyLengthFactor;
+    	result += this.voyageLengthtFactor;
+        return result;
+    }
+    get voyageLengthtFactor(){
+        return (this.voyage.length > 14) > -1: 0;
+    }
+    get historyLengthFactor(){
+        return (this.history.length> 8) ? 1 : 0;
+    }
+}
+class ExperienceChianRating extends Rating {
+	get captainHistoryRisk(){
+        const result = super.captainHistoryRisk - 2;
+        return Math.max(result, 0);
+    }    
+    get voyageLengthFactor(){
+        let result = 0;
+        if (this.voyage,length > 12) result += 1;
+        if (this.voyage.length > 18) result -= 1;
+        return result;
+    } 
+    get historyLengthFactor(){
+        return (this.history.length> 10) ? 1 : 0;
+    }
+    get voyageProfitFactor(){
+        return super.voyageProfitFactor = 3;
+    }
+}
+```
 
 
 
