--- a/refactoring/10/简化条件逻辑.md
+++ b/refactoring/10/简化条件逻辑.md
@@ -1089,6 +1089,438 @@ class ExperienceChianRating extends Rating {
 }
 ```
 
+## 10.5 引入特例（Introduce Special Case）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+if (aCustomer === "unknown") customerName = "occupant";
+```
+
+重构为：
+
+```javascript
+class UnknownCustomer {
+    get name() {return "occupant";}
+}
+```
+
+3. 动机
+
+如果我们发现代码库中有多处以同样方式应对同一个特数值，可以把这个处理逻辑收拢到一处
+
+4. 做法
+
+- 给重构目标添加检查特例的属性，令其返回false
+- 创建一个特例对象，其中只有检查特例的属性，返回true
+- 对“与特例值做对比”的代码运用提炼函数，确保所有客户端都使用这个新函数，而不再直接做特例值的对比
+- 将新的特例对象引入代码中，可以从函数调用中返回，也可以在变换函数中生成
+- 修改特例比对函数的主体，在其中直接检查特例的属性
+- 测试
+- 使用函数组合成类或者函数组合成变换，把通用的特例处理逻辑都搬移到新建的特例对象中
+- 对特例比对函数使用内联函数，将其内联到仍然需要的地方
+
+5. 范例
+
+- 范例一：
+
+```javascript
+class Site {
+    get customer(){return this._customer;}
+}
+class Customer {
+    get name (){...}
+    get billingPlan(){...}
+    set billingPlan(){...}
+    get paymentHistory(){...}
+}
+```
+
+客户端1:
+
+```javascript
+const aCustomer = site.customer;
+let customerName;
+if (aCustomer === "unknown") customerNamer = "occupant";
+else customerName = aCustomer.name;
+```
+
+客户端2:
+
+```javascript
+const plan = (aCustomer === "unknown") ? 
+      registry.billingPlan.basic 
+	  : aCustomer.billingPlan;
+```
+
+客户端3:
+
+```javascript
+if (aCustomer !== "unknown") aCustomer.billingPlan = newPlan;
+```
+
+客户端4:
+
+```javascript
+const weeksDelingquent = (aCustomer === "unknown") ?
+      0
+	  : aCustomer.patmentHistory.weeksDelingquentInLastYear;
+```
+
+很多客户端都在处理“unknown”的情况，这时可以使用特例对象模式
+
+首先给Customer添加一个函数，用于指示“unknown”
+
+```javascript
+class Customer {
+    get isUnknown(){return false;}
+}
+```
+
+然后为“unknown”创建一个类
+
+```javascript
+class UnknownCustomer {
+    get isUnknown(){return true;}
+}
+```
+
+如果有一段代码需要在很多地方做修改，先使用提炼函数
+
+```javascript
+function isUnknown(arg){
+    if (!(arg instanceof Customer) || (arg === "unknown"))
+        throw new Error(`investigate bad value: <${arg}>`);
+    return (arg === "unknown");
+}
+```
+
+然后就可以逐一修改客户端了
+
+```javascript
+// 客户端1
+const aCustomer = site.customer;
+let customerName;
+if (isUnknown(aCustomer)) customerNamer = "occupant";
+else customerName = aCustomer.name;
+// 客户端2
+const plan = (isUnknown(aCustomer)) ? 
+      registry.billingPlan.basic 
+	  : aCustomer.billingPlan;
+// 客户端3
+if isUnknown(aCustomer) aCustomer.billingPlan = newPlan;
+// 客户端4
+const weeksDelingquent = isUnknown(aCustomer) ?
+      0
+	  : aCustomer.patmentHistory.weeksDelingquentInLastYear;
+```
+
+然后修改Site类
+
+```javascript
+class Site {
+    get customer(){
+        return (this._customer == "unknown") ? new UnknownCustomer() : this._customer;
+    }
+}
+```
+
+针对客户端1可以在UnknownCustomer类添加一个函数
+
+```javascript
+class UnknownCustomer {
+    get isUnknown(){return true;}
+    get name(){return "occupant";}
+}
+```
+
+客户端1修改为
+
+```javascript
+const CustomerName = aCustomer.name;
+```
+
+针对billingPlan属性添加函数
+
+```javascript
+class UnknownCustomer {
+    get isUnknown(){return true;}
+    get name(){return "occupant";}
+    get billingPlan(){return registry.billingPlan.basic;}
+    set billingPlan(arg){...}
+}
+```
+
+针对客户端4
+
+```javascript
+class UnknownCustomer {
+    get isUnknown(){return true;}
+    get name(){return "occupant";}
+    get billingPlan(){return registry.billingPlan.basic;}
+    set billingPlan(arg){...}
+    get paymentHistory(){return new NullPaymentHistory;}
+}
+class NullPaymentHistory {
+    get weeksDelingquentInLastYear(){return 0;}
+}
+// 客户端4
+const weeksDelingquent = aCustomer.paymentHistory.weeksDelingquentInLastYear;
+```
+
+- 范例二：使用对象字面量
+
+原始代码和范例一相同
+
+首先在Customer中添加一个isUnknown属性，并创建一个包含同名字段的特例对象
+
+```javascript
+class Customer {
+    get isUnknown(){return false;}
+}
+function createUnknownCustomer(){
+    return {
+        isUnknown: true,
+    };
+}
+```
+
+然后对检查特例的条件逻辑运用提炼函数
+
+```javascript
+function isUnknown(arg){
+    return (arg === "unknown");
+}
+// 客户端1
+const aCustomer = site.customer;
+let customerName;
+if (isUnknown(aCustomer)) customerNamer = "occupant";
+else customerName = aCustomer.name;
+// 客户端2
+const plan = (isUnknown(aCustomer)) ? 
+      registry.billingPlan.basic 
+	  : aCustomer.billingPlan;
+// 客户端4
+const weeksDelingquent = isUnknown(aCustomer) ?
+      0
+	  : aCustomer.patmentHistory.weeksDelingquentInLastYear;
+```
+
+修改Site类和做条件判断的isUnknown函数，开始使用特例对象
+
+```javascript
+class Site {
+    get customer(){
+        return (this._customer === "unknown") ? createUnknownCustomer() : this._customer;
+    }
+}
+function isUnknown(arg){
+    return arg.isUnknown;
+}
+```
+
+然后根据客户端修改
+
+```javascript
+function createUnknownCustomer(){
+    return {
+        isUnknown: true,
+        name "occupent",
+        billingPlan: registry.billingPlans.basic,
+        patmentHistory: {
+        	weeksDelingquentInLastYear: 0,
+    	},
+    };
+}
+// 客户端1
+const customerName = aCustomer.name;
+// 客户端2
+const plan = aCustomer.billingPlan;
+// 客户端4
+const weeksDelingquent = aCustomer.patmentHistory.weeksDelingquentInLastYear;
+```
+
+- 范例三：使用变换
+
+数据：
+
+```json
+{
+	name: "Acme Boston",
+	location: "Malden MA",
+	// more site details
+	customer: {
+		name: "Acme Industries",
+		billingPlan: "plan-451",
+		paymentHistory: {
+			weeksDelinquentInLastYear: 7
+			//more
+		},
+		// more
+	}
+}
+{
+	name: "Warehouse Unit 15",
+	location: "Malden MA",
+	// more site details
+	customer: "unknown",
+}
+```
+
+```javascript
+// 客户端1
+const site = acquireSiteData();
+const aCustomer = site.customer;
+let customerName;
+if (aCustomer === "unknown") customerName = "occupant"
+else customerName = aCustomer.name;
+// 客户端2
+const plan = (aCustomer === "unknown") ? 
+      registry.billingPlan.basic 
+	  : aCustomer.billingPlan;
+// 客户端3
+const weeksDelingquent = (aCustomer === "unknown") ?
+      0
+	  : aCustomer.patmentHistory.weeksDelingquentInLastYear;
+```
+
+```javascript
+// 客户端1
+const rawSite = acquireSiteDate();
+const site = enrichSite(rawSite);
+const aCustomer = site.customer;
+let customerName;
+if (aCustomer === "unknown") customerName = "occupant"
+else customerName = aCustomer.name;
+function enrichSite(inputSite){
+    return _.cloneDeep(inputSIte);
+}
+```
+
+提炼函数
+
+```javascript
+function isUnknown(aCustomer){
+    return aCustomer === "unknown";
+}
+```
+
+修改客户端
+
+````javascript
+// 客户端1
+const rawSite = acquireSiteDate();
+const site = enrichSite(rawSite);
+const aCustomer = site.customer;
+let customerName;
+if isUnknown(aCustomer) customerName = "occupant"
+else customerName = aCustomer.name;
+// 客户端2
+const plan = isUnknown(aCustomer) ? 
+      registry.billingPlan.basic 
+	  : aCustomer.billingPlan;
+// 客户端3
+const weeksDelingquent = isUnknown(aCustomer) ?
+      0
+	  : aCustomer.patmentHistory.weeksDelingquentInLastYear;
+````
+
+开始对Site数据做增强
+
+```javascript
+function enrichSite(inputSite){
+    const result = _.cloneDeep(inputSIte);
+    const unknownCustomer = {
+        isUnknown: true,
+    }
+    if (isUnknown(result.customer)) result.customer = uknownCustomer;
+    else result.customer.isUnknown = false;
+    return result;
+} 
+```
+
+继续增强Site数据
+
+```javascript
+function enrichSite(inputSite){
+    const result = _.cloneDeep(inputSIte);
+    const unknownCustomer = {
+        isUnknown: true,
+        name: "occupent",
+        billingPlan: registry.billingPlan.basic,
+        patmentHistory: {
+            weeksDelingquentInLastYear: 0,
+        },
+    }
+    if (isUnknown(result.customer)) result.customer = uknownCustomer;
+    else result.customer.isUnknown = false;
+    return result;
+} 
+```
+
+客户端代码
+
+```javascript
+// 客户端1
+const rawSite = acquireSiteDate();
+const site = enrichSite(rawSite);
+const aCustomer = site.customer;
+let customerName;
+else customerName = aCustomer.name;
+// 客户端2
+const plan = aCustomer.billingPlan;
+// 客户端3
+const weeksDelingquent = aCustomer.paymentHistory.weeksDelingquentInLastY
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
