--- a/refactoring/10/简化条件逻辑.md
+++ b/refactoring/10/简化条件逻辑.md
@@ -1472,64 +1472,66 @@ else customerName = aCustomer.name;
 // 客户端2
 const plan = aCustomer.billingPlan;
 // 客户端3
-const weeksDelingquent = aCustomer.paymentHistory.weeksDelingquentInLastY
+const weeksDelingquent = aCustomer.paymentHistory.weeksDelingquentInLastYear;
 ```
 
+## 10.6 引入断言（Introduce Assertion）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+if (this.discountRate)
+    base = base - (this.discountRate * base);
+```
 
+重构为：
 
+```javascript
+assert(this.discountRate >= 0);
+if (this.discountRate)
+    base = base - (this.discountRate * base);
+```
 
+3. 动机
 
+4. 做法
 
+- 如果你发行啊代码假设某个条件始终为真，酒加入一个断言明确说明这种情况
 
+5. 范例
 
+```javascript
+class Customer {
+    applyDiscount(aNumber){
+        return (this.discountRate)
+        ? aNumber - (this.discountRate * aNumber)
+        : aNumber;
+    }
+}
+```
 
+转换为if-else的形式
 
+```javascript
+class Customer {
+    applyDiscount(aNumber){
+        if (!this.discountRate) return aNumber;
+        else return aNumber - (this.discountRate * aNumber);
+    }
+}
+```
 
+加入断言
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```javascript
+class Customer {
+    applyDiscount(aNumber){
+        if (!this.discountRate) return aNumber;
+        else
+            assert(this.discountRate >= 0);
+            return aNumber - (this.discountRate * aNumber);
+    }
+}
+```
