--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -79,9 +79,45 @@ class Party {
 }
 ```
 
+## 12.2 字段上移（Pull Up Field）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+class Employee {}
+class Salesman extends Employee {
+    private String name;
+}
+class Engineer extends Employee {
+    private String name;
+}
+```
+
+重构为：
+
+```javascript
+class Employee {
+    protected String name;
+}
+class Salesman extends Employee {...}
+class Engineer extends Employee {...}
+```
+
+3. 动机
+
+首先它取出了重复的数据声明；其次它使我可以将使用该字段的行为从子类移至超类，从而去除重复的行为
+
+4. 做法
+
+- 针对待提升之字段，检查它们的所有使用点，确认它们以同样的方式被使用
+- 如果这些字段的名称不同，先使用变量改名为它们取个相同的名字
+- 在超类中新建一个字段
+- 移除子类中的字段
+- 测试
+
+5. 范例
 
 
 
