--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -119,9 +119,160 @@ class Engineer extends Employee {...}
 
 5. 范例
 
+## 12.3 构造函数本体上移（Pull Up Constructor Body）
 
+1. 名称
 
+2. 一个简单的速写
 
+  ```javascript
+  class Party {...}
+  class Employee extends Party {
+      constructor(name, id, monthlyCost){
+          super();
+          this._id = id;
+          this._name = name;
+          this,_monthlyCost = monthlyCost;
+      }
+  }
+  ```
+
+重构为：
+
+```javascript
+class Party {
+    constructor(name){
+        this._name = name;
+    }
+}
+class Employee extends Party {
+    constructor(name, id, monthlyCost){
+        super(name);
+        this._name = name;
+        this,_monthlyCost = monthlyCost;
+    }
+}
+```
+
+3. 动机
+
+4. 做法
+
+- 如果超类还不存在构造函数，首先为其定义一个。确保让子类调用超类的构造函数
+- 使用移动语句将子类中构造函数中的公共语句移动到超类的构造函数调用语句之后
+- 逐一移除子类间的公共代码，将其提升至超类构造函数中。对于公共代码中引用到的变量，将其作为参数传递给吵了的构造函数
+- 测试
+- 如果存在无法简单提升至超类的公共代码，先应用提炼函数，再利用函数上移提升之
+
+5. 范例
+
+- 范例一：
+
+```javascript
+class Party{}
+class Employee extends Party {
+    constructor(name, id, monthlyCost){
+        super();
+        this._id = id;
+        this._name = name;
+        this,_monthlyCost = monthlyCost;
+    }
+}
+class Department extends Party {
+    constructor(name, staff){
+        super();
+        this._name = name;
+        this._staff = staff;
+    }
+}
+```
+
+先用移动语句将Employee中的赋值语句移动到super()调用后面
+
+```javascript
+class Employee extends Party {
+    constructor(name, id, monthlyCost){
+        super();
+        this._name = name;
+        this._id = id;
+        this,_monthlyCost = monthlyCost;
+    }
+}
+```
+
+在超类中使用构造函数，并将name作为参数传递
+
+```javascript
+class Party{
+    constructor(name){
+        this._name = name;
+	}
+}
+class Employee extends Party {
+    constructor(name, id, monthlyCost){
+        super(name);
+        this._id = id;
+        this,_monthlyCost = monthlyCost;
+    }
+}
+class Department extends Party {
+    constructor(name, staff){
+        super(name);
+        this._staff = staff;
+    }
+}
+```
+
+- 范例二
+
+```javascript
+class Employee {
+    constructor(name){...}
+    get isPrivileged(){...}
+    assignCar(){...}
+}
+class Manager extends Employee {
+    constructor(name, grade){
+        super(name);
+        this._grade = grade;
+        if (this.isPrivileged) this.assignCar();
+    }
+    get isPrivileged(){
+        return this._grade > 4;
+    }
+}
+```
+
+无法简单的将isPrivileged提升至超类，先对公共代码使用提炼函数
+
+```javascript
+class Manager extends Employee {
+	constructor(name, grade){
+        super(name);
+        this._grade = grade;
+        this.finishConstruction();
+    }
+    get isPrivileged(){
+        return this._grade > 4;
+    }
+    finishConstruction(){
+        if (this.isPrivileged) this.assignCar();
+    }
+} 
+```
+
+然后将提炼得到的函数上移至超类
+
+```javascript
+class Employee {
+    constructor(name){...}
+    get isPrivileged(){...}
+    assignCar(){...}
+    finishConstruction(){
+        if (this.isPrivileged) this.assignCar();
+    }
+}
+```
 
 
 
