--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -274,9 +274,43 @@ class Employee {
 }
 ```
 
+## 12.4 函数下移（Push Down Method）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+class Employee {
+    get quota {...}
+}
+class Engineer extends Employee {...}
+class Salesman extends Employee {...}
+```
+
+重构为：
+
+```javascript
+class Employee {...}
+class Engineer extends Employee {...}
+class Salesman extends Employee {
+	get quota {...}
+}
+```
+
+3. 动机
+
+如果超类中的某个函数只与一个或少数几个子类有关，那么最好将其从超类中挪走，放到真正关心它的子类中去。
+
+4. 做法
+
+- 将超类中的函数本体复制到每一个需要此函数的子类中
+- 删除超类中的函数
+- 测试
+- 将该函数从所有不需要它的那些子类中删除
+- 测试
+
+5. 范例
 
 
 
