--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -312,9 +312,43 @@ class Salesman extends Employee {
 
 5. 范例
 
+## 12.5 字段下移（Push Down Field）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+class Employee {
+    private String quota;
+}
+class Engineer extends Employee {...}
+class Salesman extends Emoloyee {...}
+```
+
+重构为：
+
+```javascript
+class Employee {...}
+class Engineer extends Employee {...}
+class Salesman extends Employee {
+    protected String quota;
+}
+```
+
+3. 动机
+
+如果某个字段只被一个或少数几个子类用到，就将其搬移到需要该字段的子类中
+
+4. 做法
+
+- 在所有需要该字段的子类中声明该字段
+- 将该字段从超类中移除
+- 测试
+- 将该字段从所有不需要它的那些子类中删掉
+- 测试
+
+5. 范例
 
 
 
