--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -350,7 +350,286 @@ class Salesman extends Employee {
 
 5. 范例
 
+## 12.6 以子类取代类型码（Replace Type Code with Subclasses）
 
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+function createEmployee(name, type){
+    return new Employee(name, type);
+}
+```
+
+重构为：
+
+```javascript
+function createEmployee(name, type){
+    switch (type) {
+        case "engineer": return new Engineer(name);
+        case "salesman": return new Salesman(name):
+        case "manager": return new Manager(name);
+    }
+}
+```
+
+3. 动机
+
+应该直接处理携带类型码这个类，还是应该处理类型码本身？？？
+
+4. 做法
+
+- 自封装类型码字段
+- 任选一个类型码取值，为其创建一个子类。覆写类型码类的取值函数，令其返回该类型码的字面量值
+- 创建一个选择器逻辑，把类型码参数映射到新的子类
+- 测试
+- 针对每个类型码取值，重复上述“创建子类，添加选择器逻辑”的过程。每次修改后执行测试
+- 去除类型码字段
+- 测试
+- 使用函数下移和以多态取代条件表达式处理原本访问了类型码的函数。全部处理完成之后，就可以移除类型码的访问函数。
+
+5. 范例
+
+- 范例一：
+
+```javascript
+class Employee {
+    constructor(name, type){
+        this.validateType(type);
+        this._name = name;
+        this._type = type;
+    }
+    validateType(arg) {
+        if (!["engineer", "manager", "salesman"].includes(arg))
+            throw new Error(`Employee connot be of type ${arg}`);
+    }
+    toString(){return `${this._name} (${this._type})`;}
+}
+```
+
+使用封装变量将类型码自封装起来
+
+```javascript
+class Employee {
+    constructor(name, type){
+        this.validateType(type);
+        this._name = name;
+        this._type = type;
+    }
+    validateType(arg) {
+        if (!["engineer", "manager", "salesman"].includes(arg))
+            throw new Error(`Employee connot be of type ${arg}`);
+    }
+    get type(){return this._type;}
+    toString(){return `${this._name} (${this.type})`;}
+}
+```
+
+先从"engineer"开始
+
+```javascript
+class Engineer extends Employee{
+    get type(){return "engineer";}
+}
+```
+
+先用工厂函数取代构造函数，新建工厂函数
+
+```javascript
+function createEmployee(name, type){
+    return new Employee(name, type);
+}
+```
+
+然后把选择器逻辑放入工厂函数
+
+```javascript
+function createEmployee(name, type){
+    switch(type){
+        case "engineer": return new Engineer(name, type);
+    }
+    return new Employee(name, type);
+}
+```
+
+处理其余的类型
+
+```javascript
+class Salesman extends Employee {
+    get type(){return "salesman";}
+}
+class Manager extends Employee {
+    get type(){return "manager";}
+}
+function createEmployee(name, type){
+    switch(type){
+        case "engineer": return new Engineer(name, type);
+        case "salesman": return new Salesman(name, type):
+        case "manager": return new Manager(name, type);
+    }
+    return new Employee(name, type);
+}
+```
+
+去掉类型码字段和超类中的取值函数
+
+```javascript
+class Employee {
+    constructor(name, type){
+        this.validateType(type);
+        this._name = name;
+    }
+    validateType(arg) {
+        if (!["engineer", "manager", "salesman"].includes(arg))
+            throw new Error(`Employee connot be of type ${arg}`);
+    }
+    toString(){return `${this._name} (${this.type})`;}
+}
+```
+
+移除验证逻辑
+
+```javascript
+class Employee {
+    constructor(name, type){
+        this._name = name;
+    }
+    toString(){return `${this._name} (${this.type})`;}
+}
+function createEmployee(name, type){
+    switch(type){
+        case "engineer": return new Engineer(name, type);
+        case "salesman": return new Salesman(name, type):
+        case "manager": return new Manager(name, type);
+        default: throw new Error(`Employee connot be of type ${type}`);
+    }
+}
+```
+
+修噶函数声明，去除类型码
+
+```javascript
+class Employee {
+    constructor(name){
+        this._name = name;
+    }
+    toString(){return `${this._name} (${this.type})`;}
+}
+function createEmployee(name, type){
+    switch(type){
+        case "engineer": return new Engineer(name);
+        case "salesman": return new Salesman(name):
+        case "manager": return new Manager(name);
+        default: throw new Error(`Employee connot be of type ${type}`);
+    }
+}
+class Engineer extends Employee{
+    get type(){return "engineer";}
+}
+class Salesman extends Employee {
+    get type(){return "salesman";}
+}
+class Manager extends Employee {
+    get type(){return "manager";}
+}
+```
+
+- 范例二：使用间接继承
+
+```javascript
+class Employee {
+    constructor(name, type){
+        this.validateType(type);
+        this._name = name;
+        this._type = type;
+    }
+    validateType(arg) {
+        if (!["engineer", "manager", "salesman"].includes(arg))
+            throw new Error(`Employee connot be of type ${arg}`);
+    }
+    get type(){return this._type;}
+    set type(arg){this._type = arg;}
+    get capitalizedType(){
+        return this._type.charAt(0).toUpperCase() + this._type.substr(1).toLowerCase();
+    }
+    toString(){return `${this._name} (${this.capitalizedType})`;}
+}
+```
+
+首先以对象取代基本类型包装类型码
+
+```javascript
+class EmployeeType {
+    constructor(aString){
+        this._value = aString;
+    }
+    toString(){return this._value;}
+}
+class Employee {
+    constructor(name, type){
+        this.validateType(type);
+        this._name = name;
+        this.type = type;
+    }
+    validateType(arg) {
+        if (!["engineer", "manager", "salesman"].includes(arg))
+            throw new Error(`Employee connot be of type ${arg}`);
+    }
+    get typeString(){return this._type.toString();}
+    get type(){return this._type;}
+    set type(arg){this._type = new EmployeeType(arg);}
+    get capitalizedType(){
+        return this.typeString.charAt(0).toUpperCase() + this.typeString.substr(1).toLowerCase();
+    }
+    toString(){return `${this._name} (${this.capitalizedType})`;}
+}
+```
+
+然后以子类取代类型码
+
+```javascript
+class Employee {
+    constructor(name, type){
+        this.validateType(type);
+        this._name = name;
+        this.type = type;
+    }
+    validateType(arg) {
+        if (!["engineer", "manager", "salesman"].includes(arg))
+            throw new Error(`Employee connot be of type ${arg}`);
+    }
+    get typeString(){return this._type.toString();}
+    get type(){return this._type;}
+    set type(arg){this._type = Employee.createEmployeeType(arg);}
+    static createEmployeeType(aString){
+        switch(aString){
+            case "engineer": return new Engineer();
+            case "manager": return new Manager();
+            case "salesman": return new Salesman();
+            default:throw new Error(`Employee connot be of type ${aString}`);
+        }
+    }
+    get capitalizedType(){
+        return this.typeString.charAt(0).toUpperCase() + this.typeString.substr(1).toLowerCase();
+    }
+    toString(){return `${this._name} (${this.type.capitalizedName})`;}
+}
+class EmployeeType {
+     get capitalizedName(){
+        return this.toString.charAt(0).toUpperCase() + this.toString.substr(1).toLowerCase();
+    }
+}
+class Engineer extends EmployeeType {
+    toString(){return "engineer";}
+}
+class Manager extends EmployeeType {
+    toString(){return "manager";}
+}
+class Salesman extends EmployeeType {
+    toString(){return "salesman";}
+}
+```
 
 
 
