--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -631,13 +631,134 @@ class Salesman extends EmployeeType {
 }
 ```
 
+## 12.7 移除子类（Remove Subclass）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+class Person {
+    get genderCode(){return "X";}
+}
+class Male extends Person {
+    get genderCode(){return "M";}
+}
+c;ass Female extends Person {
+    get genderCode(){return "F";}
+}
+```
 
+重构为：
 
+```javascript
+class Person {
+    get genderCode(){return this._genderCode;}
+}
+```
 
+3. 动机
 
+4. 做法
+
+- 使用以工厂函数渠道构造函数，把子类的构造函数包装到超类的工厂函数中
+- 如果有任何代码检查子类的类型，先用提炼函数把类型检查逻辑包装起来，然后用搬移函数将其搬移到超类。每次修改后执行测试
+- 新建一个字段，用于代表子类的类型
+- 将原本针对子类的类型做判断的函数改为使用新建的类型字段
+- 删除子类
+- 测试
+
+5. 范例
+
+```javascript
+class Person {
+    constructor(name){
+        this._name = name;
+    }
+    get name(){return this._name;}
+    get genderCode() {return "X";}
+}
+class Male extends Person {
+    get genderCode(){return "M";}
+}
+c;ass Female extends Person {
+    get genderCode(){return "F";}
+}
+const numberOfMales = people.filter(p => p instanceof Male).length;
+```
+
+先使用提炼函数把“选择哪个类来实例化”的逻辑提炼成工厂函数
+
+```javascript
+function createPerson(aRecord){
+    let p;
+    switch (aRecord.gender){
+        case 'M': p = new Male(aRecord.name);break;
+        case 'F': p = new Female(aRecord.name);break;
+        default: p = new Person(sRecord.name);
+    }
+    return p;
+}
+function loadFromInput(data){
+    const result = [];
+    data.forEach(aRecord => {
+        result.push(createPerson(aRecord));
+    });
+    return result;
+}
+```
+
+使用内联变量简化工厂函数，使用管道简化loadFromInput函数
+
+```javascript
+function createPerson(aRecord){
+    switch (aRecord.gender){
+        case 'M': return new Male(aRecord.name);
+        case 'F': return new Female(aRecord.name);
+        default: return new Person(sRecord.name);
+    }
+}
+function loadFromInput(data){
+    return data.map(aRecord => createPerson(aRecord));
+}
+const numberOfMales = people.filter(p => p  isMale(p)).length;
+function isMale(aPerson){return aPerson instanceof Male;}
+```
+
+然后使用搬移函数将客户端搬移到Person类
+
+```javascript
+class Person{
+    get isMale() {return this instanceof Male;}
+}
+const numberOfMales = people.filter(p => p.isMale).length;
+```
+
+Person类中添加一个字段来表示子类之间的差异
+
+```javascript
+class Person {
+    constructor(name, genderCOde){
+        this._name = name;
+        this._genderCode = genderCode || "X";
+    }
+    get name(){return this._name;}
+    get genderCode() {return this._genderCode;}
+    get isMale() {return "M" === this._grandeCode;}
+}
+```
+
+工厂函数添加对应的参数
+
+```javascript
+function createPerson(aRecord){
+    switch (aRecord.gender){
+        case 'M': return new Male(aRecord.name, 'M');
+        case 'F': return new Female(aRecord.name, 'F');
+        default: return new Person(sRecord.name, 'X');
+    }
+}
+```
 
 
 
