--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -760,7 +760,262 @@ function createPerson(aRecord){
 }
 ```
 
+## 12.8 提炼超类（Extract Superclass）
 
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+class Department {
+    get totalAnnualCost(){...}
+    get name(){...}
+    get headCount(){...}
+}
+class Employee {
+   get annualCost(){...}
+   get name(){...}
+   get id(){...}
+}
+```
+
+重构为：
+
+```javascript
+class Party {
+    get name(){...}
+    get annualCost(){...}
+}
+class Department extends Party {
+    get annualCost(){...}
+    get headCount(){...}
+}
+class Employee extends Party {
+    get annualCost(){...}
+    get id(){...}
+}
+```
+
+3. 动机
+
+如果两个类在做相似的事，可以利用基本的继承机制把它们的相似指出提炼到超类
+
+4. 做法
+
+- 为原本的类新建一个空白的超类
+- 测试
+- 使用构造函数本体上移、函数上移和字段上移手法，逐一将子类的共同元素上移到超类
+- 检查留在子类中的函数，看它们是否还有共同的成分。如果有，可以先用提炼函数将其提炼出来，再用函数上移搬到超类
+- 检查所有使用原本的类的客户端代码，考虑将其调整为使用超类的接口
+
+5. 范例
+
+```javascript
+class Empliyee {
+    constructor(name, id, monthlyCost){
+        this._id = id;
+        this._name = name;
+        this._monthlyCost = monthlyCost;
+    }
+    get monthlyCost(){return this._monthlyCost;}
+    get name(){return this._name;}
+    get id(){return this._id;}
+    get annualCost(){return this.monthlyCost * 12;}
+}
+class Department {
+    constructor(name, staff){
+        this._name = name;
+        this._staff = staff;
+    }
+    get staff(){return this._staff;}
+    get name(){return this._name;}
+    get totalMonthlyCost(){
+        return this.staff
+            .map(e => e.monthlyCost)
+            .reduce((sum, cost) => sum + cost);
+    }
+    get headCount(){return this.staff.length;}
+    get totalAnnualCost(){return this.totalMonthlyCost * 12;}
+}
+```
+
+首先创建一个空的超类，让原来的两个类都继承这个新的类
+
+```javascript
+class Party {}
+class Empliyee extends Party {
+    constructor(name, id, monthlyCost){
+        super();
+        this._id = id;
+        this._name = name;
+        this._monthlyCost = monthlyCost;
+    }
+    get monthlyCost(){return this._monthlyCost;}
+    get name(){return this._name;}
+    get id(){return this._id;}
+    get annualCost(){return this.monthlyCost * 12;}
+}
+class Department extends Party {
+    constructor(name, staff){
+        super();
+        this._name = name;
+        this._staff = staff;
+    }
+    get staff(){return this._staff;}
+    get name(){return this._name;}
+    get totalMonthlyCost(){
+        return this.staff
+            .map(e => e.monthlyCost)
+            .reduce((sum, cost) => sum + cost);
+    }
+    get headCount(){return this.staff.length;}
+    get totalAnnualCost(){return this.totalMonthlyCost * 12;}
+}
+```
+
+用上移字段把name搬到超类中
+
+```javascript
+class Party {
+    constructor(name){
+        this._name = name;
+    }
+}
+class Empliyee extends Party {
+    constructor(name, id, monthlyCost){
+        super(name);
+        this._id = id;
+        this._monthlyCost = monthlyCost;
+    }
+    get monthlyCost(){return this._monthlyCost;}
+    get name(){return this._name;}
+    get id(){return this._id;}
+    get annualCost(){return this.monthlyCost * 12;}
+}
+class Department extends Party {
+    constructor(name, staff){
+        super(name);
+        this._staff = staff;
+    }
+    get staff(){return this._staff;}
+    get name(){return this._name;}
+    get totalMonthlyCost(){
+        return this.staff
+            .map(e => e.monthlyCost)
+            .reduce((sum, cost) => sum + cost);
+    }
+    get headCount(){return this.staff.length;}
+    get totalAnnualCost(){return this.totalMonthlyCost * 12;}
+}
+```
+
+用函数上移把相关的函数也搬移到超类
+
+```javascript
+class Party {
+    constructor(name){
+        this._name = name;
+    }
+    get name(){return this._name;}
+}
+class Empliyee extends Party {
+    constructor(name, id, monthlyCost){
+        super(name);
+        this._id = id;
+        this._monthlyCost = monthlyCost;
+    }
+    get monthlyCost(){return this._monthlyCost;}
+    get name(){return this._name;}
+    get id(){return this._id;}
+    get annualCost(){return this.monthlyCost * 12;}
+}
+class Department extends Party {
+    constructor(name, staff){
+        super(name);
+        this._staff = staff;
+    }
+    get staff(){return this._staff;}
+    get name(){return this._name;}
+    get totalMonthlyCost(){
+        return this.staff
+            .map(e => e.monthlyCost)
+            .reduce((sum, cost) => sum + cost);
+    }
+    get headCount(){return this.staff.length;}
+    get totalAnnualCost(){return this.totalMonthlyCost * 12;}
+}
+```
+
+把两个函数体相似的函数进行改变函数声明
+
+```javascript
+class Party {
+    constructor(name){
+        this._name = name;
+    }
+    get name(){return this._name;}
+}
+class Empliyee extends Party {
+    constructor(name, id, monthlyCost){
+        super(name);
+        this._id = id;
+        this._monthlyCost = monthlyCost;
+    }
+    get monthlyCost(){return this._monthlyCost;}
+    get name(){return this._name;}
+    get id(){return this._id;}
+    get annualCost(){return this.monthlyCost * 12;}
+}
+class Department extends Party {
+    constructor(name, staff){
+        super(name);
+        this._staff = staff;
+    }
+    get staff(){return this._staff;}
+    get name(){return this._name;}
+    get monthlyCost(){
+        return this.staff
+            .map(e => e.monthlyCost)
+            .reduce((sum, cost) => sum + cost);
+    }
+    get headCount(){return this.staff.length;}
+    get annualCost(){return this.monthlyCost * 12;}
+}
+```
+
+然后将函数搬移到超类中
+
+```javascript
+class Party {
+    constructor(name){
+        this._name = name;
+    }
+    get name(){return this._name;}
+	get annualCost(){return this.monthlyCost * 12;}
+}
+class Empliyee extends Party {
+    constructor(name, id, monthlyCost){
+        super(name);
+        this._id = id;
+        this._monthlyCost = monthlyCost;
+    }
+    get monthlyCost(){return this._monthlyCost;}
+    get id(){return this._id;}
+}
+class Department extends Party {
+    constructor(name, staff){
+        super(name);
+        this._staff = staff;
+    }
+    get staff(){return this._staff;}
+    get monthlyCost(){
+        return this.staff
+            .map(e => e.monthlyCost)
+            .reduce((sum, cost) => sum + cost);
+    }
+    get headCount(){return this.staff.length;}
+}
+```
 
 
 
