--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -1017,9 +1017,36 @@ class Department extends Party {
 }
 ```
 
+## 12.9 折叠继承关系（Collapse Hierarchy）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+class Employee {...}
+class Salesman extends Employee {...}
+```
+
+重构为：
+
+```javascript
+class Employee {...}
+```
+
+3. 动机
+
+有时会发现一个类与其超类已经没有多大的差别了，不值得再作为独立的类存在，可以把超类和子类合并起来
+
+4. 做法
+
+- 选择香移除的类：是超类还是子类？
+- 使用字段上移、字段下移、函数上移和函数下移，把所有元素都移到同一个类中
+- 调整即将被移除的那个类的所有引用点，令它们改而引用合并后留下的类
+- 移除我们的目标，此时它应该已经是一个空类
+- 测试
+
+5. 范例
 
 
 
